<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:gravity ="center">

    <TextView
        android:id="@+id/TimeStampTextView"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00:00:000"
        android:textSize="30dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="invisible"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/StartResumeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/design_default_color_primary"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageView
        android:clickable="true"
        android:id="@+id/Delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:src="@android:drawable/ic_delete" />

</LinearLayout>