<?xml version="1.0" encoding="utf-8"?>
<menu         xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".View.MainActivity">

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="300"
        android:title="User"
        android:icon="@android:drawable/ic_lock_power_off"
        app:showAsAction="ifRoom"></item>

</menu>